; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wininet/extr_http.c_chunked_drain_content.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wininet/extr_http.c_chunked_drain_content.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@CHUNKED_STREAM_STATE_END_OF_STREAM = common dso_local global i64 0, align 8
@CHUNKED_STREAM_STATE_ERROR = common dso_local global i64 0, align 8
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@ERROR_NO_DATA = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32*, i32)* @chunked_drain_content to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @chunked_drain_content(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_2__*, align 8
  %9 = alloca [1024 x i32], align 16
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = bitcast i32* %12 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %13, %struct.TYPE_2__** %8, align 8
  br label %14

14:                                               ; preds = %39, %3
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @CHUNKED_STREAM_STATE_END_OF_STREAM, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %26

20:                                               ; preds = %14
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @CHUNKED_STREAM_STATE_ERROR, align 8
  %25 = icmp ne i64 %23, %24
  br label %26

26:                                               ; preds = %20, %14
  %27 = phi i1 [ false, %14 ], [ %25, %20 ]
  br i1 %27, label %28, label %40

28:                                               ; preds = %26
  %29 = load i32*, i32** %5, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = getelementptr inbounds [1024 x i32], [1024 x i32]* %9, i64 0, i64 0
  %32 = load i32, i32* %7, align 4
  %33 = call i64 @chunked_read(i32* %29, i32* %30, i32* %31, i32 4096, i64* %10, i32 %32)
  store i64 %33, i64* %11, align 8
  %34 = load i64, i64* %11, align 8
  %35 = load i64, i64* @ERROR_SUCCESS, align 8
  %36 = icmp ne i64 %34, %35
  br i1 %36, label %37, label %39

37:                                               ; preds = %28
  %38 = load i64, i64* %11, align 8
  store i64 %38, i64* %4, align 8
  br label %50

39:                                               ; preds = %28
  br label %14

40:                                               ; preds = %26
  %41 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = load i64, i64* @CHUNKED_STREAM_STATE_END_OF_STREAM, align 8
  %45 = icmp ne i64 %43, %44
  br i1 %45, label %46, label %48

46:                                               ; preds = %40
  %47 = load i64, i64* @ERROR_NO_DATA, align 8
  store i64 %47, i64* %4, align 8
  br label %50

48:                                               ; preds = %40
  %49 = load i64, i64* @ERROR_SUCCESS, align 8
  store i64 %49, i64* %4, align 8
  br label %50

50:                                               ; preds = %48, %46, %37
  %51 = load i64, i64* %4, align 8
  ret i64 %51
}

declare dso_local i64 @chunked_read(i32*, i32*, i32*, i32, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
